# WorkoutTrack

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  sqlite.db  sqlite.db-shm  sqlite.db-wal  styles.css
.github/workflows/: ci.yml
migrations/: 20230420093250_exo.sql  20230420093250_init.sql
src/: app.rs  error.rs  lib.rs  main.rs  prelude.rs  router.rs  types.rs
src-tauri/: Cargo.toml  database.sql  tauri.conf.json
src-tauri/migrations/2023-04-23-092625_init/: down.sql  up.sql
src-tauri/migrations/2023-07-22-195443_create_data_exo/: down.sql  up.sql
src-tauri/src/: cmd.rs  database.rs  errors.rs  main.rs  models.rs  schema.rs  state.rs
src-tauri/src/workout/: exercises.rs  messages.rs  mod.rs  workouts.rs
src/components/: mod.rs
src/components/atoms/: date_time_input.rs  mod.rs  text_input.rs
src/components/molecules/: add_workout_form.rs  bottom_nav.rs  exo.rs  mod.rs  workout.rs
src/components/organisms/: exo_list.rs  mod.rs  workout_list.rs
src/components/pages/: create_exo.rs  create_workout.rs  home.rs  mod.rs  workout_detail.rs
src/utils/: database.rs
