[package]
name = "workout-track-ui"
version = "0.0.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlSelectElement"] }
js-sys = "0.3"
chrono = { version = "0.4", features = ["serde"] }
yew-router = "0.17.0"
gloo-console = "0.2.3"


[workspace]
members = ["src-tauri"]
