[package]
name = "workout-track"
version = "0.0.0"
description = "A simple workout tracker"
authors = ["Arnaud Jungers"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tokio = { version = "1.29", features = ["full"] }
chrono = { version="0.4", features = ["serde"] }
uuid = { version = "1.4", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
diesel = { version = "2.1", features = ["sqlite", "chrono", "uuid"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4.19"
pretty_env_logger = "0.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
